Message Module Unit Test